--- a/modelo.css
+++ b/modelo.css
@@ -47,7 +47,8 @@ div.text_cell_render{
 .text_cell_render h1 {
     font-family: 'Philosopher', sans-serif;
     font-weight: 400;
-    font-size: 64pt;
+    font-size: 40pt;
+    text-align: center;
     line-height: 100%;
     color: rgb(12,85,97);
     margin-bottom: 0.1em;
@@ -100,5 +101,11 @@ div.text_cell_render{
 .CodeMirror{
         font-family: "PT Mono";
         font-size: 100%;
+}
+.raw_input_prompt{
+	color: black;
+}
+input.raw_input{
+	color: black;
 }
 </style>
